kubernetes/homeassistant/overlays/okd/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/instance: homeassistant
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - home.<path:secret/data/gitlab/domain#url>
      secretName: homeassistant-cert
  rules:
    - host: home.<path:secret/data/gitlab/domain#url>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
