kubernetes/homeassistant/overlays/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
    app.kubernetes.io/instance: homeassistant
spec:
  host: "home.<path:secret/data/homelab/domain#url>"
  to:
    kind: Service
    name: homeassistant
    weight: 100
  port:
    targetPort: 8123
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
